src/objects/Lead.object
<CustomObject>
    <fields>
        <fullName>CommCare_Newsletter__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Should this person receive the CommCare Newsletter? If Email Opt Out is checked they won&apos;t receive the newsletter regardless.</inlineHelpText>
        <label>CommCare Newsletter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The country the lead is in</description>
        <inlineHelpText>The country the lead is in.</inlineHelpText>
        <label>Country</label>
        <referenceTo>Country__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Email_Salutation__c</fullName>
        <formula>BLANKVALUE( FirstName ,  TEXT(Salutation) &amp;  &apos; &apos; &amp; LastName  )</formula>
        <label>Email Salutation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Template_Body__c</fullName>
        <inlineHelpText>You can use this field to add a personal message to a Mass Email.  An email template can reference this field. Typically this might be the first personalized paragraph of a generic email. (all fields on this record can be referenced by an email template)</inlineHelpText>
        <label>Email Template Body</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Email_Template_Subject__c</fullName>
        <inlineHelpText>This is used by the Mass Email functionality. You can reference this field as the subject line of an email template.  (Email templates can reference all fields on this record)</inlineHelpText>
        <label>Email Template Subject</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>How_did_you_hear_about_us__c</fullName>
        <inlineHelpText>Used on the Contact Us form on CCHQ</inlineHelpText>
        <label>How did you hear about us?</label>
        <picklist>
            <picklistValues>
                <fullName>--None--</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Colleague</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Newsletter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web Search</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <label>Language</label>
        <picklist>
            <picklistValues>
                <fullName>English</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>French</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Publication_Title__c</fullName>
        <description>This is the title of a paper the lead has published.</description>
        <inlineHelpText>This is the title of a paper the lead has published.</inlineHelpText>
        <label>Publication Title</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Publication_URL__c</fullName>
        <description>The URL to the publication</description>
        <inlineHelpText>The URL to the publication</inlineHelpText>
        <label>Publication URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Tag__c</fullName>
        <inlineHelpText>Our own tags field because Salesforce tags aren&apos;t very usable.</inlineHelpText>
        <label>Tag</label>
        <type>TextArea</type>
    </fields>
    <listViews>
        <fullName>AllOpenLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <columns>LEAD.STATUS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>LEAD.LAST_UPDATE</columns>
        <columns>LEAD.LAST_ACTIVITY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>Unqualified</value>
        </filters>
        <label>All Unqualified Leads</label>
    </listViews>
    <listViews>
        <fullName>Converted_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>Country__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>Converted</value>
        </filters>
        <label>Lead Status: Converted</label>
    </listViews>
    <listViews>
        <fullName>Div2_Researchers</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.FIRST_NAME</columns>
        <columns>LEAD.LAST_NAME</columns>
        <columns>LEAD.SALUTATION</columns>
        <columns>Publication_Title__c</columns>
        <columns>LEAD.EMAIL</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.LEAD_SOURCE</field>
            <operation>contains</operation>
            <value>Div2 Researcher</value>
        </filters>
        <label>Div2 Researchers</label>
    </listViews>
    <listViews>
        <fullName>India_ngo_view</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <label>India ngo view</label>
    </listViews>
    <listViews>
        <fullName>Lead_Jonathan</fullName>
        <columns>FULL_NAME</columns>
        <columns>Publication_Title__c</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.LAST_ACTIVITY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>equals</operation>
            <value>Jonathan</value>
        </filters>
        <label>Lead: Jonathan</label>
    </listViews>
    <listViews>
        <fullName>Lead_Status_Unqualified</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Country__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>Unqualified</value>
        </filters>
        <label>Lead Status: Unqualified</label>
    </listViews>
    <listViews>
        <fullName>Mozambique_leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.COUNTRY</field>
            <operation>equals</operation>
            <value>Mozambique</value>
        </filters>
        <label>Mozambique leads</label>
    </listViews>
    <listViews>
        <fullName>MyUnreadLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.RATING</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.STATUS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LEAD.UNREAD</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Unread Leads</label>
    </listViews>
    <listViews>
        <fullName>My_Passive_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.COUNTRY</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.LAST_ACTIVITY</columns>
        <columns>LEAD.LAST_UPDATE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>Passive</value>
        </filters>
        <label>My Passive Leads</label>
    </listViews>
    <listViews>
        <fullName>My_Unqualified_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>Country__c</columns>
        <columns>LEAD.LAST_UPDATE</columns>
        <columns>LEAD.LAST_ACTIVITY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>Unqualified</value>
        </filters>
        <label>My Unqualified Leads</label>
    </listViews>
    <listViews>
        <fullName>Passive_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>Passive</value>
        </filters>
        <label>Lead Status: Passive</label>
    </listViews>
    <listViews>
        <fullName>SMS_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <label>SMS Leads</label>
    </listViews>
    <listViews>
        <fullName>TodaysLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>Country__c</columns>
        <columns>LEAD.CITY</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Today&apos;s Leads</label>
    </listViews>
    <listViews>
        <fullName>devdir_leads_moz</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.LEAD_SOURCE</field>
            <operation>equals</operation>
            <value>devdir_mozambique</value>
        </filters>
        <label>Devdir Leads - Moz</label>
    </listViews>
    <validationRules>
        <fullName>Contact_Us_not_allowed</fullName>
        <active>false</active>
        <description>Don&apos;t allow manual entry of Contact Us in Lead Source</description>
        <errorConditionFormula>ISPICKVAL(LeadSource, &quot;Contact Us&quot;)</errorConditionFormula>
        <errorDisplayField>AnnualRevenue</errorDisplayField>
        <errorMessage>You cannot change Lead Source to &quot;Contact Us&quot;. That is reserved for submissions from the Contact Us web-form.</errorMessage>
    </validationRules>
</CustomObject>